# clawhunt

./: .env.example  .gitignore  1.txt  LICENSE  README.md  config.json  docker-compose.yml  install_postgres.sh  main.py  pg_lan_enable.bat  pyproject.toml
backend/: requirements.txt
backend/app/: main.py
backend/tests/: test_api.py
clawhunt/: Dockerfile  config.py  index.html  package-lock.json  package.json  services.py
clawhunt/docker/: nginx.conf
clawhunt/docs/research/: BEHAVIORS.md  PAGE_TOPOLOGY.md  clawhunt-discover-agents-hub-extraction.json  clawhunt-discover-arena-extraction.json  clawhunt-discover-community-extraction.json  clawhunt-discover-live-extraction.json  clawhunt-gallery-extraction.json  clawhunt-marketplace-extraction.json  clawhunt-studio-extraction.json  home-visible-audit.json  local-studio-tabs-qa.json  page-assets-bundle.json  page-assets-inventory.json  site-audit.json  studio-tabs-extraction.json
clawhunt/docs/research/components/: discover-agents-hub-page.spec.md  discover-arena-page.spec.md  discover-community-page.spec.md  discover-live-page.spec.md  discover-navigation.spec.md  gallery-page.spec.md  home-page.spec.md  marketplace-page.spec.md  studio-page.spec.md  studio-tabs.spec.md
clawhunt/src/: App.tsx  styles.css  taskApi.ts
docs/superpowers/plans/: 2026-07-09-clawhunt-auth-superclaw-proxy.md  2026-07-09-superclaw-workspace-sdk.md
scripts/: Install-LocalDev.ps1  Start-LocalBackend.ps1  Start-LocalFrontend.ps1  Start-LocalInfra.ps1
